Update master refs in chronjobs

--- a/config/kubernetes/production/cronjob-delete-old-ecr-images.yaml
+++ b/config/kubernetes/production/cronjob-delete-old-ecr-images.yaml
@@ -28,8 +28,8 @@ spec:
                   set -o pipefail
 
                   repo=peoplefinder/peoplefinder-ecr
-                  total_master_images_to_keep=25
-                  days_to_keep_non_master_images=14
+                  total_main_images_to_keep=25
+                  days_to_keep_non_main_images=14
                   region=eu-west-2
 
                   function image_count() {
@@ -46,41 +46,41 @@ spec:
                     echo "Failures: $failures"                 
                   }
 
-                  master_images_to_delete=$(aws ecr describe-images --region $region --repository-name $repo | jq "{imageDetails: [.imageDetails[] | select(.imageTags // [] | any(match(\"^.*master.*$\")) )] | sort_by(.imagePushedAt) | .[0:-$total_master_images_to_keep]}")                 
-                  master_image_count=$(echo $master_images_to_delete | jq '.imageDetails | length')
-                  echo "Total Master Images to delete: $master_image_count"
-                  echo $master_images_to_delete
+                  main_images_to_delete=$(aws ecr describe-images --region $region --repository-name $repo | jq "{imageDetails: [.imageDetails[] | select(.imageTags // [] | any(match(\"^.*main.*$\")) )] | sort_by(.imagePushedAt) | .[0:-$total_main_images_to_keep]}")                 
+                  main_image_count=$(echo $main_images_to_delete | jq '.imageDetails | length')
+                  echo "Total main Images to delete: $main_image_count"
+                  echo $main_images_to_delete
 
-                  master_images_to_keep=$(aws ecr describe-images --region $region --repository-name $repo | jq "{imageDetails: [.imageDetails[] | select(.imageTags // [] | any(match(\"^.*master.*$\")) )] | sort_by(.imagePushedAt) | .[-$total_master_images_to_keep:]}")                 
-                  master_image_keep_count=$(echo $master_images_to_keep | jq '.imageDetails | length')
-                  echo "Total Master Images to keep: $master_image_keep_count"
-                  echo $master_images_to_keep
+                  main_images_to_keep=$(aws ecr describe-images --region $region --repository-name $repo | jq "{imageDetails: [.imageDetails[] | select(.imageTags // [] | any(match(\"^.*main.*$\")) )] | sort_by(.imagePushedAt) | .[-$total_main_images_to_keep:]}")                 
+                  main_image_keep_count=$(echo $main_images_to_keep | jq '.imageDetails | length')
+                  echo "Total main Images to keep: $main_image_keep_count"
+                  echo $main_images_to_keep
                   
-                  retention_time_ms=$(($days_to_keep_non_master_images*60*60*24))
+                  retention_time_ms=$(($days_to_keep_non_main_images*60*60*24))
                   retention_cut_off_epoch=$(($(date '+%s')-$retention_time_ms))
                   echo $retention_cut_off_epoch
-                  non_master_images_to_delete=$(aws ecr describe-images --region $region --repository-name $repo | jq "{imageDetails: [.imageDetails[] | select(.imageTags // [] | any(match(\"^.*master.*$\")) | not ) | select(.imagePushedAt<=$retention_cut_off_epoch)]}")
-                  non_master_image_count=$(echo $non_master_images_to_delete | jq '.imageDetails | length')
-                  echo "Total Non-Master Images to delete: $non_master_image_count"
-                  echo $non_master_images_to_delete
+                  non_main_images_to_delete=$(aws ecr describe-images --region $region --repository-name $repo | jq "{imageDetails: [.imageDetails[] | select(.imageTags // [] | any(match(\"^.*main.*$\")) | not ) | select(.imagePushedAt<=$retention_cut_off_epoch)]}")
+                  non_main_image_count=$(echo $non_main_images_to_delete | jq '.imageDetails | length')
+                  echo "Total Non-main Images to delete: $non_main_image_count"
+                  echo $non_main_images_to_delete
 
                   echo "Deleting Images now..."
                   echo "Images before clean: $(image_count)"
 
-                  if [[ ${master_image_count} -gt 0 ]]; then
-                    master_image_digests=$(echo $master_images_to_delete | jq '[{ imageDigest: .imageDetails[].imageDigest }] | .[0:99]')
-                    delete_images "$master_image_digests"
-                    echo "Master Image deletion complete"
+                  if [[ ${main_image_count} -gt 0 ]]; then
+                    main_image_digests=$(echo $main_images_to_delete | jq '[{ imageDigest: .imageDetails[].imageDigest }] | .[0:99]')
+                    delete_images "$main_image_digests"
+                    echo "main Image deletion complete"
                   else
-                    echo "No master images to delete"
+                    echo "No main images to delete"
                   fi
 
-                  if [[ ${non_master_image_count} -gt 0 ]]; then
-                    non_master_image_digests=$(echo $non_master_images_to_delete | jq '[{ imageDigest: .imageDetails[].imageDigest }]  | .[0:99]')
-                    delete_images "$non_master_image_digests"
-                    echo "Non-master images deletion complete"
+                  if [[ ${non_main_image_count} -gt 0 ]]; then
+                    non_main_image_digests=$(echo $non_main_images_to_delete | jq '[{ imageDigest: .imageDetails[].imageDigest }]  | .[0:99]')
+                    delete_images "$non_main_image_digests"
+                    echo "Non-main images deletion complete"
                   else
-                    echo "No Non-master images to delete"
+                    echo "No Non-main images to delete"
                   fi
                   echo "Images after clean: $(image_count)"              
 
