CT-3640 Removed the old codeclimate gem and installed the new test reporter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ references:
           PGUSER: postgres
           PGHOST: 127.0.0.1
           POSTGRES_DB: peoplefinder_test
+          CC_TEST_REPORTER_ID: a386933e6d978aa2b47937e85028be665c15fac925d8c854a75d489b8507e39a
 
       - image: circleci/postgres:9.5-alpine
         environment:
@@ -131,11 +132,26 @@ references:
       name: Run rubocop
       command: bundle exec rubocop
 
+  setup_test_reporter: &setup_test_reporter
+    run:
+      name: Setup Code Climate test-reporter
+      command: |
+        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        chmod +x ./cc-test-reporter
+        ./cc-test-reporter before-build
+
   run_unit_and_feature_tests: &run_unit_and_feature_tests
     run:
       name: Run unit and feature tests
       command: |
-        SKIP_SIMPLECOV=true bundle exec rspec
+        SKIP_SIMPLECOV=false bundle exec rspec
+
+  upload_test_coverage: &upload_test_coverage
+    run:
+      name: Upload the test coverage into codeclimate
+      command: |
+        ./cc-test-reporter format-coverage -t simplecov -o "coverage/codeclimate.$CIRCLE_NODE_INDEX.json"
+        ./cc-test-reporter sum-coverage --output - coverage/codeclimate.*.json | ./cc-test-reporter upload-coverage --debug --input -
 
   configure_aws_profile: &configure_aws_profile
     run:
