Added the steps for uploading the test coverage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -230,7 +230,9 @@ jobs:
       - *wait_for_db
       - *set_up_the_database
       - *rubocop
+      - *setup_test_reporter
       - *run_unit_and_feature_tests
+      - *upload_test_coverage
 
   build_branch_and_push_to_ecr:
     <<: *deploy_container_config
