--- a/config/kubernetes/demo/deployment.yaml
+++ b/config/kubernetes/demo/deployment.yaml
@@ -81,8 +81,7 @@ spec:
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
           ports:
             - containerPort: 3000
-          command: ["./run.sh"]
-          args: ["worker"]
+          command: ["./config/docker/entrypoint-jobs.sh"]
           env:
             - name: DATABASE_URL
               valueFrom:
@@ -114,3 +113,21 @@ spec:
                 name: environment-variables
             - secretRef:
                 name: app-secrets
+        - name: metrics
+          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 9394
+          command: ['sh', '-c', 'bundle exec prometheus_exporter --bind 0.0.0.0']
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: 9394
+            initialDelaySeconds: 10
+            periodSeconds: 60
+          readinessProbe:
+            httpGet:
+              path: /metrics
+              port: 9394
+            initialDelaySeconds: 10
+            periodSeconds: 60
