--- a/config/kubernetes/staging/service.yaml
+++ b/config/kubernetes/staging/service.yaml
@@ -9,5 +9,8 @@ spec:
   - port: 3000
     name: http
     targetPort: 3000
+  - port: 9394
+    name: metrics
+    targetPort: 9394
   selector:
     app: peoplefinder
