--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ references:
           POSTGRES_USER: postgres
           PGUSER: postgres
 
-      - image: bitnami/elasticsearch:6.8.6-r1
+      - image: bitnami/elasticsearch:7.10.2-debian-10-r303
         environment:
           - cluster.name: es-test-cluster
           - xpack.security.enabled: false
