--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -67,9 +67,10 @@ Metrics/MethodLength:
 # of those is more consistent. There shouldn't be much human-readable text in
 # the application code: that is better moved to the locale files.
 Style/StringLiterals:
-  EnforcedStyle: single_quotes
-  Exclude:
-    - 'spec/**/*'
+  Enabled: false
+
+Layout/LeadingCommentSpace:
+  Enabled: false
 
 # Prefer sensible naming to comments everywhere.
 Style/Documentation:
