CT-3969 Step 1 - Add annotations to live1 ingress

--- a/config/kubernetes/development/ingress.yaml
+++ b/config/kubernetes/development/ingress.yaml
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: peoplefinder-ingress
   namespace: peoplefinder-development
+  annotations:
+    external-dns.alpha.kubernetes.io/set-identifier: peoplefinder-ingress-peoplefinder-development-blue
+    external-dns.alpha.kubernetes.io/aws-weight: "100"
 spec:
   tls:
     - hosts:
