Ct 4026 error pages ga (#718)
* CT-4026 Add error pages

* CT-4026 Add ignored assets

* CT-4026 Add images for pages

* CT-4026 testing git-crypt issue

* CT-4026 Stash automatic changes made by circleci that cause gitcrypt to choke

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,7 @@ references:
     run:
       name: Create GPG Key file from Environment variable
       command: |
+        git stash
         echo -e ${GPG_PRIVATE_KEY} > PRIVATE_GPG_KEY.asc
 
   configure_gpg: &configure_gpg
