--- a/config/kubernetes/staging/ingress-live.yaml
+++ b/config/kubernetes/staging/ingress-live.yaml
@@ -4,6 +4,8 @@ metadata:
   name: peoplefinder-ingress
   namespace: peoplefinder-staging
   annotations:
+    nginx.ingress.kubernetes.io/auth-type: basic
+    nginx.ingress.kubernetes.io/auth-secret: app-secrets
     external-dns.alpha.kubernetes.io/set-identifier: peoplefinder-ingress-peoplefinder-staging-green
     external-dns.alpha.kubernetes.io/aws-weight: "100"
 spec:
