CDPT-162 Add YJB non-gsi email

--- a/db/seeds/data/permitted_domains.yml
+++ b/db/seeds/data/permitted_domains.yml
@@ -40,5 +40,6 @@
 - sentencingcouncil.gov.uk
 - sentencingcouncil.gsi.gov.uk
 - yjb.gsi.gov.uk
+- yjb.gov.uk
 - ccrc.gov.uk
 - ima-citizensrights.org.uk
