--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @ministryofjustice/dex-ta @ministryofjustice/peoplefinder
+@ministryofjustice/central-digital-product-team @ministryofjustice/peoplefinder
