Add .local for docker compose

--- a/.env
+++ b/.env
@@ -1,5 +1,27 @@
-# minimum env vars required
+# Minimum env vars required
+SERVER_NAME=peoplefinder.docker
+RAILS_ENV=development
+
 SUPPORT_EMAIL=support@example.com
+ACTION_MAILER_DEFAULT_URL=${SERVER_NAME}
+ACTION_MAILER_SMTP_ADDRESS=mailcatcher
+ACTION_MAILER_ASSET_HOST=http://${SERVER_NAME}
+
+RACK_ENV=${RAILS_ENV}
+DATABASE_URL=postgres://postgres@postgres/peoplefinder_${RAILS_ENV}
+POSTGRES_DB=postgres
+MOJ_PF_ES_URL=http://elasticsearch
+RAILS_DEVELOPMENT_HOST_DNS=${SERVER_NAME}
+RAILS_DEVELOPMENT_HOST_NAME=app
+AWS_ACCESS_KEY_ID=not_real
+AWS_SECRET_ACCESS_KEY=not_real
+SECRET_KEY_BASE=not_real
+
+# Force a permitted domain
+PERMITTED_DOMAIN=digital.justice.gov.uk
+
+# JASMIN IS DEPRECATED, MUST REPLACE!... in the meantime...
+SUPPRESS_JASMINE_DEPRECATION=true
 
 # allow read-only access from local development
 READONLY_IP_WHITELIST=127.0.0.1
