--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,36 @@
+# There are three non-mutually exclusive ways to use this file:
 #
-# example env file which can be used in place of
-# bash env vars for use in local development
-# environment only.
-# 1. copy contents to a new file named `.env.local`
-# 2. create your own Google+ OAuth client ID and SECRET
-#    and add here.
+# When using Docker compose.
+# - run `make build`; the environment is managed
 #
-# NOTE: .env file will override vars defined here.
+# When using foreman to start the app.
+# - copy this file to .env
+# - fill in the appropriate values for each env var
+# - run foreman to start the app and all it required components
 #
-GECKOBOARD_API_KEY=moj_geckoboard_api_key
-GPLUS_CLIENT_ID=localdev_gplus_client_id
-GPLUS_CLIENT_SECRET=localdev_gplus_client_secret
-SSL_ON=false
-GA_TRACKING_ID=UA-XXXXX-X
-MAX_TOKENS_PER_HOUR=8
-KEEN_PROJECT_ID=aaaaaaaaaaaaaaa
-KEEN_MASTER_KEY=xxxxxxxxxxxxxxx
-KEEN_WRITE_KEY=yyyyyyyyyyyyyyy
-KEEN_READ_KEY=zzzzzzzzzzzzzzz
+# When starting the app by hand.
+# - copy this file to env.sh or similar
+# - prefix each env var setting line with 'export '
+# - fill in the appropriate values for each env var
+# - run '. ./env.sh' in any shell you'll be using to run components of this app
+# - run 'rails server' or 'sidekiq -C config/sidekiq-mailer.yml' as you normally would
+
+# For docker-compose
+# App specific
+
+
+
+
+
+
+# Google Analytics
+GA_TRACKING_ID=
+SETTINGS__SMOKE_TESTS__USERNAME=
+SETTINGS__SMOKE_TESTS__PASSWORD=
+SETTINGS__GOVUK_NOTIFY_API_KEY=your-local-testing-api-key-generated-from-www.notifications.service.gov.uk
+
+# Devise OmniAuth - Azure Active Directory
+# Ask a colleague in the team to provide these to you.
+OMNIAUTH_AZURE_TENANT_ID=
+OMNIAUTH_AZURE_CLIENT_ID=
+OMNIAUTH_AZURE_CLIENT_SECRET=
