--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 # load tester file produced by rake task by default
 /spec/fixtures/csv_load_tester.csv
 /spec/support/uploads
+
+.local/.setup-complete
