Protocol removed from URL

--- a/.env
+++ b/.env
@@ -10,15 +10,12 @@ ACTION_MAILER_ASSET_HOST=http://${SERVER_NAME}
 RACK_ENV=${RAILS_ENV}
 DATABASE_URL=postgres://postgres@postgres/peoplefinder_${RAILS_ENV}
 POSTGRES_DB=postgres
-MOJ_PF_ES_URL=http://elasticsearch
+MOJ_PF_ES_URL=elasticsearch
 RAILS_DEVELOPMENT_HOST_DNS=${SERVER_NAME}
 RAILS_DEVELOPMENT_HOST_NAME=app
 AWS_ACCESS_KEY_ID=not_real
 AWS_SECRET_ACCESS_KEY=not_real
 SECRET_KEY_BASE=not_real
-
-# Force a permitted domain
-PERMITTED_DOMAIN=digital.justice.gov.uk
 
 # JASMIN IS DEPRECATED, MUST REPLACE!... in the meantime...
 SUPPRESS_JASMINE_DEPRECATION=true
