--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 # Minimum env vars required
-SERVER_NAME=peoplefinder.docker
+PF_HOST_NAME=peoplefinder.docker
 RAILS_ENV=development
 
 SUPPORT_EMAIL=support@example.com
-ACTION_MAILER_DEFAULT_URL=${SERVER_NAME}
+ACTION_MAILER_DEFAULT_URL=${PF_HOST_NAME}
 ACTION_MAILER_SMTP_ADDRESS=mailcatcher
-ACTION_MAILER_ASSET_HOST=http://${SERVER_NAME}
+ACTION_MAILER_ASSET_HOST=http://${PF_HOST_NAME}
 
 RACK_ENV=${RAILS_ENV}
 DATABASE_URL=postgres://postgres@postgres/peoplefinder_${RAILS_ENV}
 POSTGRES_DB=postgres
 MOJ_PF_ES_URL=elasticsearch
-RAILS_DEVELOPMENT_HOST_DNS=${SERVER_NAME}
+RAILS_DEVELOPMENT_HOST_DNS=${PF_HOST_NAME}
 RAILS_DEVELOPMENT_HOST_NAME=app
 AWS_ACCESS_KEY_ID=not_real
 AWS_SECRET_ACCESS_KEY=not_real
