--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
 
   app:
     shm_size: '256mb'
-    env_file: .env
+    env_file: .env.local
     environment:
-      VIRTUAL_HOST: ${SERVER_NAME}
+      VIRTUAL_HOST: ${PF_HOST_NAME}
       VIRTUAL_PORT: 3000
     build:
       args:
@@ -52,7 +52,7 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
     environment:
-      VIRTUAL_HOST: elasticsearch.${SERVER_NAME}
+      VIRTUAL_HOST: elasticsearch.${PF_HOST_NAME}
       VIRTUAL_PORT: 9200
       xpack.security.enabled: false
       discovery.type: single-node
@@ -74,7 +74,7 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:7.4.0
     environment:
-      VIRTUAL_HOST: kibana.${SERVER_NAME}
+      VIRTUAL_HOST: kibana.${PF_HOST_NAME}
       VIRTUAL_PORT: 5601
       ELASTICSEARCH_HOSTS: http://elasticsearch:9200
     ports:
@@ -96,7 +96,7 @@ services:
     image: dpage/pgadmin4
     restart: always
     environment:
-      PGADMIN_DEFAULT_EMAIL: dbadmin@${SERVER_NAME}
+      PGADMIN_DEFAULT_EMAIL: dbadmin@${PF_HOST_NAME}
       PGADMIN_DEFAULT_PASSWORD: letMeIn
     ports:
       - "5050:80"
@@ -108,5 +108,5 @@ services:
   mailcatcher:
     image: schickling/mailcatcher
     environment:
-      VIRTUAL_HOST: mail.${SERVER_NAME}
+      VIRTUAL_HOST: mail.${PF_HOST_NAME}
       VIRTUAL_PORT: 1080
