Isolate local dev and testing

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ RACK_ENV=${RAILS_ENV}
 DATABASE_URL=postgres://postgres@postgres/peoplefinder_${RAILS_ENV}
 POSTGRES_DB=postgres
 MOJ_PF_ES_URL=elasticsearch
+MOJ_PF_ES_VERSION=7.4.0
 RAILS_DEVELOPMENT_HOST_DNS=${PF_HOST_NAME}
 RAILS_DEVELOPMENT_HOST_NAME=app
 AWS_ACCESS_KEY_ID=not_real
