--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       - spec-gems:/home/circleci/.rubygems
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:${MOJ_PF_ES_VERSION}
     environment:
       VIRTUAL_HOST: elasticsearch.${PF_HOST_NAME}
       VIRTUAL_PORT: 9200
@@ -72,7 +72,7 @@ services:
       - "9300:9300"
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.4.0
+    image: docker.elastic.co/kibana/kibana:${MOJ_PF_ES_VERSION}
     environment:
       VIRTUAL_HOST: kibana.${PF_HOST_NAME}
       VIRTUAL_PORT: 5601
