--- a/.env
+++ b/.env
@@ -10,8 +10,7 @@ ACTION_MAILER_ASSET_HOST=http://${PF_HOST_NAME}
 RACK_ENV=${RAILS_ENV}
 DATABASE_URL=postgres://postgres@postgres/peoplefinder_${RAILS_ENV}
 POSTGRES_DB=postgres
-MOJ_PF_ES_URL=elasticsearch
-MOJ_PF_ES_VERSION=7.4.0
+PF_ELASTICSEARCH_VERSION=7.4.0
 RAILS_DEVELOPMENT_HOST_DNS=${PF_HOST_NAME}
 RAILS_DEVELOPMENT_HOST_NAME=app
 AWS_ACCESS_KEY_ID=not_real
