Reinstate .env in source and intro .env.local

--- a/.env.example
+++ b/.env.example
@@ -15,13 +15,27 @@
 # - run '. ./env.sh' in any shell you'll be using to run components of this app
 # - run 'rails server' or 'sidekiq -C config/sidekiq-mailer.yml' as you normally would
 
-# For docker-compose
-# App specific
 
+# Local specific (docker compose)
+PF_HOST_NAME=peoplefinder.docker
+RAILS_ENV=development
 
+ACTION_MAILER_DEFAULT_URL=${PF_HOST_NAME}
+ACTION_MAILER_SMTP_ADDRESS=mailcatcher
+ACTION_MAILER_ASSET_HOST=http://${PF_HOST_NAME}
 
+RACK_ENV=${RAILS_ENV}
+DATABASE_URL=postgres://postgres@postgres/peoplefinder_${RAILS_ENV}
+POSTGRES_DB=postgres
+PF_ELASTICSEARCH_VERSION=7.4.0
+RAILS_DEVELOPMENT_HOST_DNS=${PF_HOST_NAME}
+RAILS_DEVELOPMENT_HOST_NAME=app
+AWS_ACCESS_KEY_ID=not_real
+AWS_SECRET_ACCESS_KEY=not_real
+SECRET_KEY_BASE=not_real
 
-
+# JASMIN IS DEPRECATED, MUST REPLACE!... in the meantime...
+SUPPRESS_JASMINE_DEPRECATION=true
 
 # Google Analytics
 GA_TRACKING_ID=
