Adjust .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,16 @@
-# There are three non-mutually exclusive ways to use this file:
-#
 # When using Docker compose.
 # - run `make build`; the environment is managed
 #
-# When using foreman to start the app.
-# - copy this file to .env
-# - fill in the appropriate values for each env var
-# - run foreman to start the app and all it required components
+# example env file which can be used in place of
+# bash env vars for use in local development
+# environment only.
+# 1. copy contents to a new file named `.env.local` [make env]
+# 2. create your own Google+ OAuth client ID and SECRET
+#    and add below.
 #
-# When starting the app by hand.
-# - copy this file to env.sh or similar
-# - prefix each env var setting line with 'export '
-# - fill in the appropriate values for each env var
-# - run '. ./env.sh' in any shell you'll be using to run components of this app
-# - run 'rails server' or 'sidekiq -C config/sidekiq-mailer.yml' as you normally would
+# NOTE: .env file will override vars defined here.
+#
 
-
-# Local specific (docker compose)
 PF_HOST_NAME=peoplefinder.docker
 RAILS_ENV=development
 
@@ -36,6 +30,17 @@ SECRET_KEY_BASE=not_real
 
 # JASMIN IS DEPRECATED, MUST REPLACE!... in the meantime...
 SUPPRESS_JASMINE_DEPRECATION=true
+
+GECKOBOARD_API_KEY=moj_geckoboard_api_key
+GPLUS_CLIENT_ID=localdev_gplus_client_id
+GPLUS_CLIENT_SECRET=localdev_gplus_client_secret
+SSL_ON=false
+GA_TRACKING_ID=UA-XXXXX-X
+MAX_TOKENS_PER_HOUR=8
+KEEN_PROJECT_ID=aaaaaaaaaaaaaaa
+KEEN_MASTER_KEY=xxxxxxxxxxxxxxx
+KEEN_WRITE_KEY=yyyyyyyyyyyyyyy
+KEEN_READ_KEY=zzzzzzzzzzzzzzz
 
 # Google Analytics
 GA_TRACKING_ID=
