--- a/config/kubernetes/development/ingress-live.yaml
+++ b/config/kubernetes/development/ingress-live.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: peoplefinder-ingress
@@ -9,15 +9,19 @@ metadata:
     external-dns.alpha.kubernetes.io/set-identifier: peoplefinder-ingress-peoplefinder-development-green
     external-dns.alpha.kubernetes.io/aws-weight: "100"
 spec:
+  ingressClassName: default
   tls:
     - hosts:
-        - development.peoplefinder.service.gov.uk
+      - development.peoplefinder.service.gov.uk
       secretName: peoplefinder-certificate
   rules:
     - host: development.peoplefinder.service.gov.uk
       http:
         paths:
-          - path: /
-            backend:
-              serviceName: peoplefinder-service
-              servicePort: 3000
+        - path: /
+          pathType: ImplementationSpecific
+          backend:
+            service:
+              name: peoplefinder-service
+              port: 
+                number: 3000
